<resources>
    <string name="app_name">TaskMaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Добавить новую задачу</string>
    <string name="clear_done_tasks">Очистить завершённые задачи</string>
    <string name="end_data_text">Дата окончания:</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="start_data_text">Дата начала:</string>
    <string name="back">Назад</string>
    <string name="edit_task_name">Введите название задачи</string>
    <string name="edit_task_description">Введите описание задачи</string>
    <string name="edit_tags_text">Теги:</string>
    <string name="choose_tags">Выберите теги</string>
    <string name="receive_notifications">Ежедневное уведомление:</string>
    <string name="choose_time">Выберите время</string>
    <string name="add">Сохранить</string>
    <string name="clear">Очистить</string>
    <string name="on">Включить</string>
    <string name="temp_date">10.10.2011</string>
    <string name="defiz">-</string>
    <string name="empty_mes">ПУСТОЕ СООБЩЕНИЕ</string>
</resources>