<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:background="@drawable/rounded_square_background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/task_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_mes"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/task_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/empty_mes"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/task_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_name_textview"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/task_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/empty_mes"
        android:textColor="@color/nord_4"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_task_description"
        tools:ignore="MissingConstraints,UnknownIdInLayout" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/task_status"
        tools:layout_editor_absoluteX="10dp" />

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/task_end_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_date"
            android:textColor="@color/polar_nord_4_custom"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/defiz"
            android:textColor="@color/polar_nord_4_custom" />

        <TextView
            android:id="@+id/task_start_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_date"
            android:textColor="@color/polar_nord_4_custom"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/date_layout"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageButton
            android:id="@+id/task_execute"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/image_button_oval"
            app:srcCompat="@drawable/ic_done" />

        <ImageButton
            android:id="@+id/task_edit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/image_button_oval"
            app:srcCompat="@drawable/ic_task_edit" />

        <ImageButton
            android:id="@+id/task_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/image_button_oval"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/ic_task_delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
